--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-icons": "^4.8.0",
     "react-timepicker": "^2.0.2",
     "react-toastify": "^9.1.2",
+    "sweetalert2": "^11.7.3",
+    "sweetalert2-react-content": "^5.0.7",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   }
